# public-ontology-registry

./: LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
data/canadacities/: canada_provinces.json
data/uscities/: us_states.json  uscities.csv
notebooks/: DEMO - Parsing Ontology Canada.ipynb  DEMO - Parsing Ontology.ipynb  DEMO - Pipelines Create Canada Cities Ontology.ipynb  DEMO - Pipelines Create Ontology.ipynb  __init__.py
ontologies/canada_city/: canada_city.owl  canada_city_og.owl
ontologies/us_city/: us_city.owl
pipelines/: __init__.py
resources/config/: bast.yaml
resources/scripts/: download-en_core_web_sm.ps1  download-en_core_web_sm.sh
